tests/expectations/compiler/const_generics/const_generic_shadows_global_constant_fail.out
Error [EAST0372017]: The name `N` is defined multiple times.
    --> compiler-test:8:10
     |
   7 |   const N: u32 = 5;
     |         ^ previous definition of `N` here
   8 |   fn foo::[N: u32]() {}
     |            ^ `N` redefined here
